package ex1;

public enum Cream {
    Whipped_Cream,
    Red_Berries,
    Vanilla
}
