package ex1;

public enum Shape {
    Circle,
    Square,
    Rectangle
}
