package ex1;

public enum Topping {
    Fruit,
    Chocolate,
}
